[gd_scene load_steps=29 format=3 uid="uid://b7tc7bmjx30bg"]

[ext_resource type="Script" uid="uid://cavltkckc505c" path="res://Scripts/nemicoPugni.gd" id="1_dtkh3"]
[ext_resource type="Texture2D" uid="uid://dxy1v6gesryhu" path="res://Assets/top-down-shooter/characters/head/5.png" id="2_6jvyk"]
[ext_resource type="Texture2D" uid="uid://rc48a2mrqi3f" path="res://Assets/top-down-shooter/characters/body/2.png" id="3_lecpv"]
[ext_resource type="Texture2D" uid="uid://bsmf26nepg53u" path="res://Assets/top-down-shooter/characters/leg-animation.png" id="4_nplb7"]
[ext_resource type="Texture2D" uid="uid://rf3wnxwkfmrt" path="res://Assets/top-down-shooter/weapons/attach-to-body/12.png" id="5_y7obr"]
[ext_resource type="Texture2D" uid="uid://dwxfuun34h2dt" path="res://Assets/top-down-shooter/FX/1.png" id="6_lecpv"]
[ext_resource type="Texture2D" uid="uid://bu5xoj4i3duxc" path="res://Assets/top-down-shooter/FX/3.png" id="7_nplb7"]
[ext_resource type="Script" uid="uid://b4iipw8tinkwn" path="res://Scripts/hit.gd" id="8_nplb7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o4s14"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jriwm"]
atlas = ExtResource("4_nplb7")
region = Rect2(0, 0, 15, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dww1"]
atlas = ExtResource("4_nplb7")
region = Rect2(15, 0, 15, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_inyuv"]
atlas = ExtResource("4_nplb7")
region = Rect2(30, 0, 15, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q824"]
atlas = ExtResource("4_nplb7")
region = Rect2(45, 0, 15, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyqcc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jriwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inyuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q824")
}],
"loop": true,
"name": &"cammina",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y7obr"]
atlas = ExtResource("6_lecpv")
region = Rect2(0, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4s14"]
atlas = ExtResource("6_lecpv")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyqcc"]
atlas = ExtResource("6_lecpv")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwaan"]
atlas = ExtResource("6_lecpv")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p5ih"]
atlas = ExtResource("6_lecpv")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uv4n"]
atlas = ExtResource("6_lecpv")
region = Rect2(185, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g4ae"]
atlas = ExtResource("7_nplb7")
region = Rect2(160, 0, 32, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_pj6a6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7obr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4s14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyqcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwaan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p5ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uv4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g4ae")
}],
"loop": false,
"name": &"hit",
"speed": 30.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_lecpv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_nplb7"]

[sub_resource type="Animation" id="Animation_nplb7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corpo/busto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corpo/busto:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corpo/testa:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("corpo/testa:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("corpo/pugno:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6.5, 4.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("corpo/pugno:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lecpv"]
resource_name = "pugno"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("corpo/pugno:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.223333, 0.333333, 0.433333, 0.5, 0.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6.5, 4.5), Vector2(-12, -5), Vector2(-12, -5), Vector2(-10.5, 14), Vector2(-8, 15.5), Vector2(-5.5, 16), Vector2(-6.5, 4.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("corpo/pugno:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.223333, 0.333333, 0.433333, 0.5, 0.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.518041, 0.518041, -0.69065, -0.838562, -1.08085, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("corpo/busto:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.682539),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("corpo/busto:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1333, 0.336251, 0.501867, 0.682539),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.453266, -0.398918, -0.712578, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("corpo/testa:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1333, 0.416549, 0.501867, 0.682539),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, -6), Vector2(1.5, -8), Vector2(-3, -5.5), Vector2(-3, -4), Vector2(-0.5, -6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("corpo/testa:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.140523, 0.421568, 0.682539),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.401608, -0.504803, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y7obr"]
_data = {
&"RESET": SubResource("Animation_nplb7"),
&"pugno": SubResource("Animation_lecpv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nplb7"]
radius = 16.0

[node name="Nemico Pugni" type="CharacterBody2D" groups=["nemico"]]
scale = Vector2(2, 2)
script = ExtResource("1_dtkh3")
rotation_offset_deg = -83.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource("CircleShape2D_o4s14")

[node name="corpo" type="Node2D" parent="."]

[node name="testa" type="Sprite2D" parent="corpo"]
z_index = 1
position = Vector2(-0.5, -6)
texture = ExtResource("2_6jvyk")

[node name="busto" type="Sprite2D" parent="corpo"]
texture = ExtResource("3_lecpv")

[node name="gambe" type="AnimatedSprite2D" parent="corpo"]
z_index = -1
position = Vector2(-1.5, 5)
sprite_frames = SubResource("SpriteFrames_cyqcc")
animation = &"cammina"
frame = 2
frame_progress = 0.379879

[node name="pugno" type="Sprite2D" parent="corpo"]
position = Vector2(-6.5, 4.5)
texture = ExtResource("5_y7obr")

[node name="hit" type="AnimatedSprite2D" parent="corpo"]
visible = false
z_index = 3
position = Vector2(-2, 17)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_pj6a6")
animation = &"hit"
frame = 5
frame_progress = 0.185067
script = ExtResource("8_nplb7")

[node name="attackTimer" type="Timer" parent="."]
wait_time = 0.67

[node name="vita" type="TextureProgressBar" parent="."]
offset_left = -20.5
offset_top = -37.5
offset_right = 19.5
offset_bottom = 2.5
scale = Vector2(0.56, 0.0800003)
pivot_offset = Vector2(20, 20)
max_value = 3.0
value = 3.0
rounded = true
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_lecpv")
texture_progress = SubResource("CanvasTexture_nplb7")
tint_under = Color(0, 0, 0, 0.494118)
tint_progress = Color(1, 0, 0, 1)

[node name="animazionePugno" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y7obr")
}

[node name="attackArea" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
visible = false
light_mask = 2
z_index = -2
shape = SubResource("CircleShape2D_nplb7")

[connection signal="timeout" from="attackTimer" to="." method="_on_AttackTimer_timeout"]
